[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/new_game/character_selection.gd" type="Script" id=1]

[node name="character_selection" type="VBoxContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = 50.0
margin_right = -250.0
margin_bottom = -50.0
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
margin_right = 1100.0
margin_bottom = 14.0
text = "New Game - Character Selection"
align = 1

[node name="picker" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1100.0
margin_bottom = 45.0

[node name="player_one" type="VBoxContainer" parent="picker"]
margin_right = 544.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="picker/player_one"]
margin_right = 544.0
margin_bottom = 14.0
text = "Player One"
align = 1

[node name="characters" type="ItemList" parent="picker/player_one"]
margin_top = 18.0
margin_right = 544.0
margin_bottom = 27.0
size_flags_horizontal = 3
allow_reselect = true
auto_height = true
max_columns = 2
same_column_width = true
icon_scale = 5.0

[node name="VSeparator" type="VSeparator" parent="picker"]
margin_left = 548.0
margin_right = 552.0
margin_bottom = 27.0

[node name="player_two" type="VBoxContainer" parent="picker"]
margin_left = 556.0
margin_right = 1100.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="picker/player_two"]
margin_right = 544.0
margin_bottom = 14.0
text = "Player Two"
align = 1

[node name="characters" type="ItemList" parent="picker/player_two"]
margin_top = 18.0
margin_right = 544.0
margin_bottom = 27.0
size_flags_horizontal = 3
allow_reselect = true
auto_height = true
max_columns = 2
same_column_width = true
icon_scale = 5.0

[node name="start_game" type="Button" parent="."]
margin_top = 49.0
margin_right = 1100.0
margin_bottom = 69.0
disabled = true
text = "Start Game"

[connection signal="item_selected" from="picker/player_one/characters" to="." method="_on_player_one_character_selected"]
[connection signal="item_selected" from="picker/player_two/characters" to="." method="_on_player_two_character_selected"]
[connection signal="pressed" from="start_game" to="." method="_on_start_game_pressed"]
